[package]
name = "artifacts-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
uuid = { version = "1.4.1", features = ["v4"] }
log = "0.4.19"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
futures = "0.3.28"
